# srgb.rs

./: .rustfmt.toml  Cargo.toml  README.md  build.rs
.github/workflows/: master.yml
benches/: gamma.rs  xyz.rs
src/: gamma.rs  lib.rs  maths.rs  rec709.rs  xyz.rs
