[package]
name          = "srgb"
description   = "sRGB primitives and constants — lightweight crate with functions and constants needed when manipulating sRGB colours"
version       = "0.2.0"
readme        = "README.md"
categories    = ["graphics", "multimedia::images", "multimedia::video"]
keywords      = ["srgb", "xyz", "color", "rgb", "rec709"]
authors       = ["Michal Nazarewicz <mina86@mina86.com>"]
license       = "LGPL-3.0-or-later"
repository    = "https://github.com/mina86/srgb"
documentation = "https://docs.rs/srgb"
edition       = "2018"

[dev-dependencies]
approx = "0.4"
delta_e = "^0.2"
criterion = { version = "0.3.3", default-features = false }

[build-dependencies]
rgb_derivation = "0.2"
num = "0.4"

[[bench]]
name = "xyz"
harness = false

[[bench]]
name = "gamma"
harness = false

[features]
no-fma = []
prefer-fma = []
