[package]
name          = "srgb"
description   = "sRGB primitives and constants — lightweight crate with functions and constants needed when manipulating sRGB colours"
version       = "0.3.2"
readme        = "README.md"
categories    = ["graphics", "multimedia::images", "multimedia::video"]
keywords      = ["srgb", "xyz", "color", "rgb", "rec709"]
authors       = ["Michal Nazarewicz <mina86@mina86.com>"]
license       = "LGPL-3.0-or-later"
repository    = "https://github.com/mina86/srgb.rs"
documentation = "https://docs.rs/srgb"
edition       = "2018"

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.4", default-features = false }
float_next_after = "0.1"
kahan = "0.1"
rgb = "0.8"

[build-dependencies]
rgb_derivation = "0.2"
num = "0.4"

[build-dependencies.rug]
version = "1.17"
default-features = false
features = ["float", "rational", "std"]

[[bench]]
name = "xyz"
harness = false

[[bench]]
name = "gamma"
harness = false
